--- a/pd/src/templates/index.html
+++ b/pd/src/templates/index.html
@@ -12,7 +12,7 @@
 
     <div>
         <button id="startButton" onclick="startPoseDetection()">Start Pose Detection</button>
-        <button id="stopButton" onclick="stopPoseDetection()">Stop Pose Detection</button>
+        <button id="stopButton" onclick="stopPoseDetection()" disabled>Stop Pose Detection</button>
     </div>
 
     <script>
